--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,10 @@
 <div class="container">
-  <h2>メンバー一覧</h2>
+  <div class="d-flex">
+    <h2>メンバー一覧</h2>
+    <div class="ml-auto events__link-box">
+      <%= link_to '新規作成', new_user_registration_path, class: 'btn btn-outline-dark' %>
+    </div>
+  </div>
   <table class="table table-hover users__table">
     <thead class="thead-dark">
       <tr>
