--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,4 +1,4 @@
-.login-box, .sign_up-box{
+.login-box, .sign_up-box, .my_edit-box{
     margin: 0 auto;
     max-width: 500px;
     margin-top: 50px;
