--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,27 +1,29 @@
 <div class="container">
-    <h2>プロフィール編集</h2>
-    <%= form_for @user do |f| %>
-        <div class="field">
-        <span>担当パート</span>
-        <%= f.collection_check_boxes(:part_ids, Part.all, :id, :name) do |part| %>
-        <div class="btn">
-            <%= part.label class: 'btn btn-secondary' do %>
-            <%= part.check_box class: 'btn-check' %>
-            <%= part.text %>
+    <div class="my_edit-box">
+        <h2>プロフィール編集</h2>
+        <%= form_for @user do |f| %>
+            <div class="field">
+            <span>担当パート</span>
+            <%= f.collection_check_boxes(:part_ids, Part.all, :id, :name) do |part| %>
+            <div class="btn">
+                <%= part.label class: 'btn btn-secondary' do %>
+                <%= part.check_box class: 'btn-check' %>
+                <%= part.text %>
+                <% end %>
+            </div>
             <% end %>
         </div>
-        <% end %>
-    </div>
-
-    <div class="field">
-        <%= f.label :name %><br />
-        <%= f.text_field :name, autocomplete: "ニックネーム" %>
-    </div>
 
         <div class="field">
-        <%= f.label :profile %><br />
-        <%= f.text_area :profile, autocomplete: "プロフィール文" %>
+            <%= f.label :name %><br />
+            <%= f.text_field :name, autocomplete: "ニックネーム" %>
+        </div>
+
+            <div class="field">
+            <%= f.label :profile %><br />
+            <%= f.text_area :profile, autocomplete: "プロフィール文" %>
+        </div>
+            <%= f.submit '保存', class: 'btn btn-primary' %>
+        <% end %>
     </div>
-        <%= f.submit '保存', class: 'btn btn-primary' %>
-    <% end %>
 </div>
