--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -79,7 +79,21 @@
     }
 
     &-foot{
-        margin-top: 50px;
+        max-width: 70%;
+        margin: 0 auto;
+
+        input{
+            width: 100%;
+            margin-top: 30px;
+            padding: 12px 20px;
+        }
+
+        .btn-back{
+            margin-top: 10px;
+            width: 100%;
+            padding: 12px 20px;
+            
+        }
     }
 
 }
