--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,13 +1,12 @@
 <div class="container">
-  <div class="d-flex">
-    <div class="ml-auto events__link-box">
-        <%= link_to '一覧へ戻る', events_path, class: 'btn btn-outline-dark' %>
-        <% if current_user.admin %>
-          <%= link_to '編集', edit_event_path(@event), class: 'btn btn-outline-dark' %>
-        <% end %>
-    </div>
-  </div>
   <div class="event_detail">
+    <div class="d-flex">
+      <div class="ml-auto events__link-box">
+          <% if current_user.admin %>
+            <%= link_to '編集', edit_event_path(@event), class: 'btn btn-outline-dark' %>
+          <% end %>
+      </div>
+    </div>
     <% if @event.image.file %>
       <%= image_tag @event.image.url, alt:"event_image" %>
     <% else %>
@@ -38,7 +37,7 @@
         <%= f.hidden_field :user_id, :value => current_user.id %>
         <%= f.submit 'このイベントに参加する', class: 'btn btn-outline-dark btn-rsv' %>
       <% end %>
-      <%= link_to '一覧へ戻る', events_path, class: 'btn btn-outline-dark' %>  
+      <%= link_to 'イベント一覧へ戻る', events_path, class: 'btn btn-outline-dark btn-back' %>  
     </div>
   </div>
 </div>
